--- a/360.html
+++ b/360.html
@@ -1,77 +1,303 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>360° Tim Hortons Restaurant Tour</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #000;
-      color: #fff;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-    }
-    header {
-      text-align: center;
-      padding: 20px 10px;
-      background: linear-gradient(to bottom, #111, #000);
-    }
-    h1 {
-      margin: 0;
-      font-size: 1.8rem;
-    }
-    .video-container {
-      position: relative;
-      width: 100%;
-      height: 0;
-      padding-bottom: 56.25%; /* 16:9 aspect ratio – standard for most YouTube videos */
-      overflow: hidden;
-      background: #111;
-    }
-    .video-container iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-    .note {
-      max-width: 800px;
-      margin: 20px auto;
-      padding: 0 15px;
-      font-size: 0.95rem;
-      color: #ccc;
-      text-align: center;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LOCO OTRO | The Immersive Experience</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&family=Playfair+Display:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --bg-cream: #f9f9f7;
+            --yellow: #f4d03f;
+            --accent-red: #a62626;
+            --text-dark: #1a1a1a;
+            --night-bg: #111;
+        }
+
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+
+        body {
+            font-family: 'Montserrat', sans-serif;
+            background-color: var(--bg-cream);
+            color: var(--text-dark);
+            transition: background-color 0.8s ease, color 0.8s ease;
+            overflow-x: hidden;
+        }
+
+        body.night-mode { background-color: var(--night-bg); color: #fff; }
+
+        /* --- 1. TIME-BASED HERO --- */
+        .hero {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 0 10%;
+            position: relative;
+        }
+        .hero h1 { font-family: 'Playfair Display', serif; font-size: 3.5rem; line-height: 1.2; max-width: 800px; }
+        .hero-tag { background: var(--yellow); padding: 5px 15px; font-weight: 900; font-size: 0.8rem; display: inline-block; margin-bottom: 20px; color: #000; text-transform: uppercase; }
+
+        /* --- 2. 360 RECAP SECTION (Fixed Background) --- */
+        .recap-viewport {
+            position: relative;
+            height: 400vh; /* Long scroll for overlays */
+        }
+
+        .video-fixed-container {
+            position: sticky;
+            top: 0;
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1;
+        }
+
+        /* Oval Mask */
+        .oval-clipper {
+            width: 85vw;
+            height: 80vh;
+            border-radius: 50%;
+            overflow: hidden;
+            border: 4px solid rgba(0,0,0,0.1);
+            position: relative;
+            background: #000;
+        }
+
+        .video-wrapper {
+            position: absolute;
+            top: 50%; left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100%; height: 100%;
+            pointer-events: none;
+        }
+
+        .video-wrapper iframe {
+            width: 177.78vh; height: 100vh; min-width: 100vw;
+            border: none;
+            filter: sepia(0.4) brightness(0.7);
+        }
+
+        /* --- SURREALIST OVERLAYS --- */
+        .recap-content {
+            position: relative;
+            z-index: 10;
+        }
+
+        .recap-step {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        .overlay-svg {
+            width: 320px; height: 320px;
+            opacity: 0; transform: scale(0.8) translateY(100px);
+            transition: all 0.7s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
+
+        .green-label {
+            background: #00ff00; color: #000;
+            font-weight: 900; padding: 12px 24px;
+            text-transform: uppercase; margin-top: 20px;
+            box-shadow: 8px 8px 0px rgba(0,0,0,0.1);
+            opacity: 0; transition: 0.4s ease 0.3s;
+        }
+
+        .in-view .overlay-svg { opacity: 1; transform: scale(1) translateY(0); }
+        .in-view .green-label { opacity: 1; }
+
+        /* --- 3. BOUTIQUE ABOUT US & SIDEBAR --- */
+        .about-wrapper { position: relative; background: var(--bg-cream); padding-right: 80px; }
+
+        .loconess-sidebar {
+            position: absolute; top: 100px; right: 0; bottom: 100px;
+            width: 80px; display: flex; flex-direction: column;
+            align-items: center; justify-content: space-between;
+            padding: 40px 0; border-left: 1px solid #ddd;
+        }
+
+        .sidebar-track { height: 60%; width: 1px; background: #ddd; position: relative; }
+        .sidebar-marker {
+            position: absolute; width: 12px; height: 12px;
+            background: var(--yellow); border-radius: 50%;
+            left: -6px; transition: top 0.1s linear;
+        }
+
+        .content-row {
+            display: flex; align-items: center; padding: 100px 80px; gap: 80px;
+        }
+        .content-row.reverse { flex-direction: row-reverse; }
+
+        .image-box { flex: 1.2; height: 500px; overflow: hidden; }
+        .image-box img { width: 100%; height: 100%; object-fit: cover; }
+        .text-box { flex: 1; }
+
+        /* --- 4. MAGNETIC FOOTER --- */
+        footer {
+            background: #fff; padding: 100px 10%;
+            display: flex; justify-content: space-between; align-items: center;
+        }
+        .social-row { display: flex; gap: 20px; }
+        .magnetic-btn {
+            width: 50px; height: 50px; background: #000; color: #fff;
+            border-radius: 50%; display: flex; align-items: center; justify-content: center;
+            cursor: pointer; transition: transform 0.2s ease-out; font-weight: 800;
+        }
+
+        /* Responsive Mobile */
+        @media (max-width: 768px) {
+            .content-row { flex-direction: column; padding: 40px 20px; text-align: center; }
+            .hero h1 { font-size: 2.2rem; }
+            .image-box { height: 300px; width: 100%; }
+            .loconess-sidebar { width: 40px; }
+            .about-wrapper { padding-right: 40px; }
+        }
+    </style>
 </head>
 <body>
 
-  <header>
-    <h1>360° Virtual Tour: Inside Tim Hortons Restaurant</h1>
-    <p>Drag with mouse (desktop) or tilt your phone (YouTube app on mobile) to explore!</p>
-  </header>
+    <div class="hero" id="hero">
+        <span class="hero-tag" id="time-tag">About Us</span>
+        <h1 id="hero-title">coffee and pastries by morning.</h1>
+    </div>
 
-  <div class="video-container">
-    <iframe 
-      src="https://www.youtube.com/embed/XQLb-bA47q0?rel=0&showinfo=0&enablejsapi=1"
-      title="Visit Inside Tim Horton Restaurant with Tour Narration: 360° VR Video"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      allowfullscreen>
-    </iframe>
-  </div>
+    <div class="recap-viewport">
+        <div class="video-fixed-container">
+            <div class="oval-clipper">
+                <div class="video-wrapper">
+                    <iframe src="https://www.youtube.com/embed/XQLb-bA47q0?autoplay=1&mute=1&loop=1&playlist=XQLb-bA47q0&controls=0&enablejsapi=1" allow="autoplay; encrypted-media"></iframe>
+                </div>
+            </div>
+        </div>
 
-  <div class="note">
-    <strong>Mobile tip:</strong> For full 360° exploration with gyroscope (tilt to look around), tap the video to open in the YouTube app.<br>
-    On desktop/laptop: Use mouse to drag and look around the restaurant.<br>
-    Video by Virtual Vacation • Uploaded Jan 2021 • #360video #VR360
-  </div>
+        <div class="recap-content">
+            <section class="recap-step">
+                <div class="overlay-svg">
+                    <svg viewBox="0 0 400 300">
+                        <path d="M220 200 L210 150 C 205 100, 230 40, 250 50 C 265 60, 260 90, 260 110 L270 200 Z" fill="#E8C3A9" stroke="#333"/>
+                        <path d="M200 130 C 180 80, 200 40, 220 50 L230 130 Z" fill="#E8C3A9" stroke="#333"/>
+                        <rect x="205" y="60" width="10" height="15" rx="3" fill="white" opacity="0.8"/>
+                        <path d="M100 200 L110 130 C 130 80, 150 130, 140 200 Z" fill="#E8C3A9" stroke="#333"/>
+                        <rect x="150" y="110" width="40" height="10" fill="white" rx="5"/>
+                    </svg>
+                </div>
+                <div class="green-label">Quickie in the Kitchen</div>
+            </section>
 
-  <!-- Optional: Add more content below if you want (text, images, links, etc.) -->
-  <!-- <p style="text-align: center; padding: 40px 20px;">Your additional website content here...</p> -->
+            <section class="recap-step">
+                <div class="overlay-svg">
+                    <svg viewBox="0 0 200 200">
+                        <path d="M100 10 L115 70 L175 75 L130 115 L150 175 L100 140 L50 175 L70 115 L25 75 L85 70 Z" fill="black" />
+                        <path d="M90 20 L90 80 M100 20 L100 85 M110 20 L110 80" stroke="white" stroke-width="4"/>
+                        <rect x="85" y="80" width="30" height="100" fill="white" rx="5"/>
+                    </svg>
+                </div>
+                <div class="green-label">200% Off Every Time You Dine</div>
+            </section>
 
+            <section class="recap-step">
+                <div class="overlay-svg">
+                    <svg viewBox="0 0 200 200" fill="white">
+                        <circle cx="60" cy="80" r="15"/><circle cx="100" cy="70" r="15"/><circle cx="140" cy="80" r="15"/>
+                        <path d="M40 160 L160 160 L150 110 L50 110 Z" />
+                    </svg>
+                </div>
+                <div class="green-label">Special Celebration</div>
+            </section>
+        </div>
+    </div>
+
+    <div class="about-wrapper">
+        <aside class="loconess-sidebar">
+            <span>☼</span>
+            <div class="sidebar-track"><div class="sidebar-marker" id="marker"></div></div>
+            <span style="writing-mode: vertical-rl; text-transform: uppercase; font-size: 0.6rem; color: #999;">Increase of Loconess</span>
+            <span>☾</span>
+        </aside>
+
+        <section class="content-row">
+            <div class="image-box"><img src="https://images.unsplash.com/photo-1495474472287-4d71bcdd2085?w=800"></div>
+            <div class="text-box">
+                <span class="yellow-tag">Breakfast</span>
+                <p>from 10:00. specialty coffee, smooth and crafted with care.</p>
+            </div>
+        </section>
+
+        <section class="content-row reverse">
+            <div class="image-box"><img src="https://images.unsplash.com/photo-1510812431401-41d2bd2722f3?w=800"></div>
+            <div class="text-box">
+                <span class="yellow-tag">Food Menu</span>
+                <p>served all day. soulful producers and small-scale wines.</p>
+            </div>
+        </section>
+
+        <section class="content-row">
+            <div class="image-box"><img src="https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?w=800"></div>
+            <div class="text-box">
+                <span class="yellow-tag">Cocktails</span>
+                <p>bold yet balanced. shaped by local flavour and character.</p>
+            </div>
+        </section>
+    </div>
+
+    <footer>
+        <div style="font-weight: 800; font-size: 0.7rem; text-transform: uppercase;">Instagram / Phone / Location</div>
+        <div class="social-row">
+            <div class="magnetic-btn">ig</div>
+            <div class="magnetic-btn">wa</div>
+            <div class="magnetic-btn">📍</div>
+        </div>
+    </footer>
+
+    <script>
+        // 1. Time Switching
+        function updateTheme() {
+            const hour = new Date().getHours();
+            const title = document.getElementById('hero-title');
+            if (hour >= 18 || hour < 6) {
+                title.innerText = "snacks and cocktails as the day flows.";
+                document.body.classList.add('night-mode');
+            }
+        }
+
+        // 2. Intersection Observer for Recap Overlays
+        const obs = new IntersectionObserver((entries) => {
+            entries.forEach(e => {
+                if (e.isIntersecting) e.target.classList.add('in-view');
+                else e.target.classList.remove('in-view');
+            });
+        }, { threshold: 0.6 });
+        document.querySelectorAll('.recap-step').forEach(s => obs.observe(s));
+
+        // 3. Scroll Tracking for Sidebar
+        window.addEventListener('scroll', () => {
+            const about = document.querySelector('.about-wrapper');
+            const aboutTop = about.offsetTop;
+            const aboutHeight = about.offsetHeight;
+            const scroll = window.scrollY + window.innerHeight / 2;
+            
+            if (scroll >= aboutTop && scroll <= aboutTop + aboutHeight) {
+                const progress = ((scroll - aboutTop) / aboutHeight) * 100;
+                document.getElementById('marker').style.top = Math.min(progress, 100) + "%";
+            }
+        });
+
+        // 4. Magnetic Footer
+        document.querySelectorAll('.magnetic-btn').forEach(btn => {
+            btn.addEventListener('mousemove', (e) => {
+                const r = btn.getBoundingClientRect();
+                btn.style.transform = `translate(${(e.clientX - r.left - r.width/2)*0.4}px, ${(e.clientY - r.top - r.height/2)*0.4}px)`;
+            });
+            btn.addEventListener('mouseleave', () => btn.style.transform = '');
+        });
+
+        updateTheme();
+    </script>
 </body>
 </html>
